--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800;900&family=Solitreo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@200;300;400;500&family=Darker+Grotesque:wght@400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800;900&family=Solitreo&display=swap" rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
