--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Exciting things are coming soon! Stay tuned for updates, announcements, and a new experience. Join us as we prepare for a launch that you won't want to miss."
+      content="Exciting things are coming soon! Stay tuned for updates, announcements. Join us as we prepare for a launch that you won't want to miss."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
