--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta
       name="description"
       content=""
-      content="Exciting things are coming soon! Stay tuned for updates, announcements. Join us as we prepare for a launch that you won't want to miss."
+      content="codemarch: Learn Coding Online | Frontend, Languages, Personal Branding for developers."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Stay tuned</title>
+    <title>codemarch: Learn Coding Online | Frontend, Languages, Personal Branding for developers.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
